--- a/portfolio.html
+++ b/portfolio.html
@@ -48,16 +48,76 @@
                     <img src="./images/project-1.jpg" alt="пример работ" width="370" />
                     <h2>Технокряк</h2>
                     <p> Веб-сайт</p>
+                    <p> Технокряк это современная площадка распространения коронавируса. 
+                        Компании используют эту платформу для цифрового шпионажа и атак на защищённые 
+                        сервера конкурентов.</p
                 </li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li> 
+                    <img src="./images/project-2.jpg" alt="пример работ" width="370" />
+                    <h2>Постер New Orlean vs Golden Star</h2>
+                    <p>Дизайн</p>
+                    <p> Технокряк это современная площадка распространения коронавируса. 
+                        Компании используют эту платформу для цифрового шпионажа и атак на защищённые 
+                        сервера конкурентов.</p>
+                </li>
+                <li> 
+                    <img src="./images/project-3.jpg" alt="пример работ" width="370" />
+                    <h2>Ресторан Seafood</h2>
+                    <p>Приложение</p>
+                    <p> Технокряк это современная площадка распространения коронавируса. 
+                        Компании используют эту платформу для цифрового шпионажа и атак на защищённые 
+                        сервера конкурентов.</p>
+                </li>
+                <li> 
+                    <img src="./images/project-4.jpg" alt="пример работ" width="370" />
+                    <h2>Проект Prime</h2>
+                    <p>Маркетинг</p>
+                    <p> Технокряк это современная площадка распространения коронавируса. 
+                        Компании используют эту платформу для цифрового шпионажа и атак на защищённые 
+                        сервера конкурентов.</p>
+                </li>
+                <li> 
+                    <img src="./images/project-5.jpg" alt="пример работ" width="370" />
+                    <h2>Проект Prime</h2>
+                    <p>Маркетинг</p>
+                    <p> Технокряк это современная площадка распространения коронавируса. 
+                        Компании используют эту платформу для цифрового шпионажа и атак на защищённые 
+                        сервера конкурентов.</p>
+                </li>
+                <li> 
+                    <img src="./images/project-6.jpg" alt="пример работ" width="370" />
+                    <h2>Проект Prime</h2>
+                    <p>Маркетинг</p>
+                    <p> Технокряк это современная площадка распространения коронавируса. 
+                        Компании используют эту платформу для цифрового шпионажа и атак на защищённые 
+                        сервера конкурентов.</p>
+                </li>
+                <li> 
+                    <img src="./images/project-7.jpg" alt="пример работ" width="370" />
+                    <h2>Проект Prime</h2>
+                    <p>Маркетинг</p>
+                    <p> Технокряк это современная площадка распространения коронавируса. 
+                        Компании используют эту платформу для цифрового шпионажа и атак на защищённые 
+                        сервера конкурентов.</p>
+                </li>
+                <li> 
+                    <img src="./images/project-8.jpg" alt="пример работ" width="370" />
+                    <h2>Проект Prime</h2>
+                    <p>Маркетинг</p>
+                    <p> Технокряк это современная площадка распространения коронавируса. 
+                        Компании используют эту платформу для цифрового шпионажа и атак на защищённые 
+                        сервера конкурентов.</p>
+                </li>
+                <li> 
+                    <img src="./images/project-9.jpg" alt="пример работ" width="370" />
+                    <h2>Проект Prime</h2>
+                    <p>Маркетинг</p>
+                    <p> Технокряк это современная площадка распространения коронавируса. 
+                        Компании используют эту платформу для цифрового шпионажа и атак на защищённые 
+                        сервера конкурентов.</p>
+                </li>
+
+                
             </ul>
         </section>
    
