adding primary and title text color

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <ul>
             <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
+            <li><a href="./portfolio.html">Портфолио</a></li>
             <li><a href="">Контакты</a></li>
          </ul>
         </nav>
@@ -37,10 +37,10 @@
     </section>
 
     <!--Особенности-->
-    <section>
-      <h2>Особенности</h2>
-        <ul>
-            <li> 
+    <section class="features">
+      <h2 class="features-title">Особенности</h2>
+        <ul class="list">
+            <li>  
                 <img src="./images/antenna-1.svg" alt="antenna" width="70" />
                 <h3>Внимание к деталям</h3>
                 <p> 
@@ -76,9 +76,9 @@
     </section>
 
     <!--Чем мы занимаемся-->
-    <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+    <section class="work">
+        <h2 class="work-title">Чем мы занимаемся</h2>
+        <ul class="list">
             <li>
                 <img src="./images/img.jpg" alt="desktop app" width="370"/> 
               <h3>Десктопные приложени</h3>
@@ -96,9 +96,9 @@
 
     <!--Наша команда-->
 
-    <section>
-        <h2>Наша команда</h2>    
-          <ul> 
+    <section class="about-us"> 
+        <h2 class="about-us-title">Наша команда</h2>    
+          <ul class="list"> 
             <li> 
               <img src="./images/card1.jpg" alt="Nicolay Kurchenko фотография" width="270"/> 
               <h4>Николай Кучеренко</h4>
@@ -155,9 +155,9 @@
     </section>
 
     <!--Постоянные клиенты-->
-    <section>
-        <h2>Постоянные клиенты</h2>
-        <ul>
+    <section class="clients">
+        <h2 class="clients-title">Постоянные клиенты</h2>
+        <ul class="list">
             <li><a href=""><img src="./images/logo-1.svg" alt="client 1"/></a></li> 
             <li><a href=""><img src="./images/logo-2.svg" alt="client 2"/></a></li> 
             <li><a href=""><img src="./images/logo-3.svg" alt="client 3"/></a></li> 
