--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Верхняя линия-->
     <header>
         <nav>
-          <a href="./index.html">Web Studio</a>
+          <spam class="full-logo"><a href="./index.html"><span class="part-logo">Web</span>Studio</a></spam>
 
         <ul>
             <li><a href="">Студия</a></li>
@@ -33,7 +33,7 @@
     <!--Шапка-->
     <section>
         <h1> Эффективные решения для вашего бизнеса </h1>
-        <a href="">Заказать услугу</a>
+        <button type="button" class="button.primary"><a href="">Заказать услугу</a></button> 
     </section>
 
     <!--Особенности-->
