--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
         <nav>
           <a href="./index.html">Web Studio</a>
 
-        <ul>
+        <ul class="list">
             <li><a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
             <li><a href="">Контакты</a></li>
