--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
     <link rel="stylesheet" href="./css/style.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -31,8 +32,8 @@
 
     <main>
     <!--Шапка-->
-    <section>
-        <h1> Эффективные решения для вашего бизнеса </h1>
+    <section class="hero"> 
+        <h1 class="hero-title"> Эффективные решения для вашего бизнеса </h1>
         <button type="button" class="button.primary"><a href="">Заказать услугу</a></button> 
     </section>
 
@@ -42,32 +43,32 @@
         <ul class="list">
             <li>  
                 <img src="./images/antenna-1.svg" alt="antenna" width="70" />
-                <h3>Внимание к деталям</h3>
-                <p> 
+                <h3 class="features-subtitle">Внимание к деталям</h3>
+                <p class="features-paragraph"> 
                     Идейные соображения, а также начало повседневной работы по 
                     формированию позиции.
                 </p>
             </li>
             <li> 
                 <img src="./images/clock-1.svg" alt="clock" width="70" />
-                <h3>Пунктуальность</h3>
-                <p> 
+                <h3 class="features-subtitle">Пунктуальность</h3>
+                <p class="features-paragraph"> 
                     Задача организации, в особенности же рамки и место обучения
                     кадров влечет за собой.
                 </p>
             </li>
             <li> 
                 <img src="./images/diagram-1.svg" alt="diagram" width="70" />
-                <h3>Планирование</h3>
-                <p> 
+                <h3 class="features-subtitle"> Планирование</h3>
+                <p class="features-paragraph"> 
                     Равным образом консультация с широким активом в значительной 
                     степени обуславливает.
                 </p>
             </li>
             <li> 
                 <img src="./images/astronaut-1.svg" alt="astronaut" width="70" />
-                <h3>Современные технологии</h3>
-                <p> 
+                <h3 class="features-subtitle"> Современные технологии</h3>
+                <p class="features-paragraph"> 
                     Значимость этих проблем настолько очевидна, 
                     что реализация плановых заданий.
                 </p>
