--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <!--Верхняя линия-->
     <header>
         <nav>
-            <a href="./index.html" class="logo-link"><span class="first-part-logo">Web</span><span class="second-part-logo">Studio</span></a>
-  
+            <a href="./index.html" class="logo"><span class="logo-web">Web </span> Studio </a>
           <ul class="list">
               <li><a href="" class="menu-link">Студия</a></li>
               <li><a href="./portfolio.html" class="menu-link">Портфолио</a></li>
@@ -176,7 +175,7 @@
     <footer class="footer">
 
       <div>
-        <a href="./index.html" class="logo-link"><span class="first-part-logo">Web</span><span class="second-part-logo color">Studio</span></a>
+        <a href="./index.html" class="logo-footer"><span class="logo-web">Web </span> Studio </a>
 
         <address>
          <p class="footer-address">г. Киев, пр-т Леси Украинки, 26<br/>
