--- a/portfolio.html
+++ b/portfolio.html
@@ -14,14 +14,13 @@
     <!--Верхняя линия-->
     <header>
         <nav>
-          <a href="./index.html" class="logo-link"><span class="first-part-logo">Web</span><span class="second-part-logo">Studio</span></a>
-
-        <ul class="list">
-            <li><a href="" class="menu-link">Студия</a></li>
-            <li><a href="./portfolio.html" class="menu-link">Портфолио</a></li>
-            <li><a href="" class="menu-link">Контакты</a></li>
-         </ul>
-        </nav>
+            <a href="./index.html" class="logo"><span class="logo-web">Web </span> Studio </a>
+          <ul class="list">
+              <li><a href="" class="menu-link">Студия</a></li>
+              <li><a href="./portfolio.html" class="menu-link">Портфолио</a></li>
+              <li><a href="" class="menu-link">Контакты</a></li>
+           </ul>
+          </nav>
 
         <div>
         <ul class="list"> 
@@ -121,7 +120,7 @@
      <footer class="footer">
 
         <div>
-          <a href="./index.html" class="logo-link"><span class="first-part-logo">Web</span><span class="second-part-logo color">Studio</span></a>
+            <a href="./index.html" class="logo-footer"><span class="logo-web">Web </span> Studio </a>
   
           <address>
            <p class="footer-address">г. Киев, пр-т Леси Украинки, 26<br/>
