--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="./index.html" class="logo"><span class="logo-web">Web </span> Studio </a>
           <ul class="list">
-              <li><a href="" class="menu-link">Студия</a></li>
+              <li><a href="" class="menu-link active">Студия</a></li>
               <li><a href="./portfolio.html" class="menu-link">Портфолио</a></li>
               <li><a href="" class="menu-link">Контакты</a></li>
            </ul>
@@ -35,7 +35,7 @@
     <!--Шапка-->
     <section class="hero"> 
         <h1 class="hero-title"> Эффективные решения <br> для вашего бизнеса </h1>
-        <button><a href="" class="btn">Заказать услугу</a></button> 
+        <a href="" class="btn">Заказать услугу</a>
     </section>
 
     <!--Особенности-->
