--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="./index.html" class="logo"><span class="logo-web">Web </span> Studio </a>
           <ul class="list">
-              <li><a href="" class="menu-link">Студия</a></li>
+              <li><a href="" class="menu-link active">Студия</a></li>
               <li><a href="./portfolio.html" class="menu-link">Портфолио</a></li>
               <li><a href="" class="menu-link">Контакты</a></li>
            </ul>
@@ -35,16 +35,14 @@
         <section>
             <h1 hidden>Портфолио</h1>
             <div>
-                <button type="button" class="portfolio-filters">Все</button>
-                <button type="button" class="portfolio-filters">Веб-сайты</button>
-                <button type="button" class="portfolio-filters">Приложения</button>
-                <button type="button" class="portfolio-filters">Дизайн</button>
-                <button type="button" class="portfolio-filters">Маркетинг</button>
+                <ul class="list">
+                    <li><button type="button" class="portfolio-filters">Все</button></li>
+                    <li><button type="button" class="portfolio-filters">Веб-сайты</button></li>
+                    <li><button type="button" class="portfolio-filters">Приложения</button></li>
+                    <li><button type="button" class="portfolio-filters">Дизайн</button></li>
+                    <li><button type="button" class="portfolio-filters">Маркетинг</button></li>
+                </ul>
             </div>
-        </section>
-
-        <section>
-
             <ul class="list"> 
                 <li>
                     <a href=""><img src="./images/project-1.jpg" alt="пример работ" width="370" /></a> 
